Enable showing errors in production

--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -17,6 +17,8 @@
     <authentication mode="Forms">
       <forms loginUrl="~/User/Login" />
     </authentication>
+
+    <customErrors mode="Off"/>
     
     <httpRuntime targetFramework="4.5" />
     
