--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -14,6 +14,8 @@
   </connectionStrings>
 
   <system.web>
+    <customErrors mode="Off"/>
+
     <authentication mode="Forms">
       <forms loginUrl="~/User/Login" />
     </authentication>
