--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -13,21 +13,21 @@
     <add name="Production" connectionString="Server=69.89.31.250;Port=5432;User Id=neoanime_abroadadvisor;Password=uZtVIgiToZP4RxTPD;Database=neoanime_abroadadvisor;SSL=True;Sslmode=Require;" />
   </connectionStrings>
 
-  <system.data>
+  <!--<system.data>
     <DbProviderFactories>
       <add name="Npgsql Data Provider"
         invariant="Npgsql"
         description=".Net Framework Data Provider for PostgreSQL"
         type="Npgsql.NpgsqlFactory, Npgsql, Version=2.0.12.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     </DbProviderFactories>
-  </system.data>
+  </system.data>-->
 
   <system.web>
     <authentication mode="Forms">
       <forms loginUrl="~/User/Login" />
     </authentication>
 
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     
     <httpRuntime targetFramework="4.5" />
     
