--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -10,7 +10,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Production" connectionString="Server=69.89.31.250;Port=5432;User Id=neoanime_abroadadvisor;Password=uZtVIgiToZP4RxTPD;Database=neoanime_abroadadvisor;SSL=True;Sslmode=Require;" />
+    <add name="Production" connectionString="Server=69.89.31.250; Port=5432; User Id=neoanime_abroadadvisor; Password=uZtVIgiToZP4RxTPD; Database=neoanime_abroadadvisor; SSL=True; Sslmode=Require; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;" />
   </connectionStrings>
 
   <system.web>
