Add missing project file list change
Supposed to have been part of 7753172bc8a3ed2efb6d5835fcfe3730c417d8dd

--- a/AbroadAdvisor/AbroadAdvisor.csproj
+++ b/AbroadAdvisor/AbroadAdvisor.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Models\MatriculationModel.cs" />
     <Compile Include="Models\NoteModel.cs" />
     <Compile Include="Models\PingModel.cs" />
+    <Compile Include="Models\StudentClassificationModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
