--- a/AbroadAdvisor.Core/AbroadAdvisor.Core.csproj
+++ b/AbroadAdvisor.Core/AbroadAdvisor.Core.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Connections.cs" />
+    <Compile Include="DateTimeFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
