--- a/AbroadAdvisor/Web.Release.config
+++ b/AbroadAdvisor/Web.Release.config
@@ -14,6 +14,13 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="Production"
+         connectionString="Server=69.89.31.250; Port=5432; User Id=neoanime_abroadadvisor; Password=uZtVIgiToZP4RxTPD; Database=neoanime_abroadadvisor; SSL=True; Sslmode=Require; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;"
+         xdt:Transform="Replace" xdt:Locator="Match(name)" />
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
