--- a/AbroadAdvisor.Core/AbroadAdvisor.Core.csproj
+++ b/AbroadAdvisor.Core/AbroadAdvisor.Core.csproj
@@ -34,11 +34,14 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationCache.cs" />
     <Compile Include="Connections.cs" />
     <Compile Include="DateTimeFilter.cs" />
     <Compile Include="Formatter.cs" />
+    <Compile Include="ICacheService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
