--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -39,6 +39,7 @@
 
   <system.webServer>
     <staticContent>
+      <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
     </staticContent>
 
