--- a/AbroadAdvisor.Core/AbroadAdvisor.Core.csproj
+++ b/AbroadAdvisor.Core/AbroadAdvisor.Core.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Analytics.cs" />
     <Compile Include="ApplicationCache.cs" />
     <Compile Include="Connections.cs" />
     <Compile Include="DateTimeFilter.cs" />
@@ -45,6 +46,12 @@
     <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\piwik-dotnet-tracker\Piwik.Tracker\Piwik.Tracker.csproj">
+      <Project>{c3bb0e94-f45c-4691-81ff-061fc20e3209}</Project>
+      <Name>Piwik.Tracker</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
