--- a/AbroadAdvisor/Web.Release.config
+++ b/AbroadAdvisor/Web.Release.config
@@ -15,6 +15,10 @@
     </connectionStrings>
   -->
 
+  <appSettings>
+    <add key="Environment" value="Release" xdt:Transform="Replace" xdt:Locator="Match(name)" />
+  </appSettings>
+
   <connectionStrings>
     <add name="Production"
          connectionString="Server=69.89.31.250; Port=5432; User Id=neoanime_abroadadvisor; Password=uZtVIgiToZP4RxTPD; Database=neoanime_abroadadvisor; SSL=True; Sslmode=Require; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;"
