--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -7,6 +7,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="Environment" value="Debug" />
   </appSettings>
 
   <connectionStrings>
