--- a/AbroadAdvisor/Web.Release.config
+++ b/AbroadAdvisor/Web.Release.config
@@ -16,7 +16,7 @@
   -->
 
   <appSettings>
-    <add key="Environment" value="Release" xdt:Transform="Replace" xdt:Locator="Match(name)" />
+    <add key="Environment" value="Release" xdt:Transform="Replace" xdt:Locator="Match(key)" />
   </appSettings>
 
   <connectionStrings>
