Use analytics admin token from config

--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -8,6 +8,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="Environment" value="Debug" />
+    <add key="AnalyticsAdminToken" value="fdb0ca65560ea3264a5bcc6922ac08ce" />
   </appSettings>
 
   <connectionStrings>
