Initial duplicate student check

--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -5,8 +5,8 @@
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ClientValidationEnabled" value="false" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="false" />
     <add key="Environment" value="Debug" />
     <add key="AnalyticsAdminToken" value="fdb0ca65560ea3264a5bcc6922ac08ce" />
   </appSettings>
