--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+  <configSections>
+    <section name="Exceptional" type="StackExchange.Exceptional.Settings, StackExchange.Exceptional" />
+  </configSections>
+
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -14,6 +18,10 @@
   <connectionStrings>
     <add name="Production" connectionString="Server=localhost; Port=5432; User Id=neoanime_abroadadvisor; Password=uZtVIgiToZP4RxTPD; Database=neoanime_abroadadvisor; SSL=False; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;" />
   </connectionStrings>
+
+  <Exceptional applicationName="AbroadAdvisor">
+    <ErrorStore type="PostgreSQL" connectionStringName="Production" />
+  </Exceptional>
 
   <system.web>
     <authentication mode="Forms">
@@ -42,6 +50,11 @@
   </system.web>
 
   <system.webServer>
+    <!-- Catch all unhandled exceptions. -->
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="ErrorLog" type="StackExchange.Exceptional.ExceptionalModule, StackExchange.Exceptional" />
+    </modules>
+
     <staticContent>
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
