--- a/AbroadAdvisor/Web.config
+++ b/AbroadAdvisor/Web.config
@@ -32,7 +32,7 @@
 
     <sessionState timeout="240" />
     
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" enableVersionHeader="false" />
     
     <compilation debug="true" targetFramework="4.5" />
 
