--- a/Belletrix/Web.Release.config
+++ b/Belletrix/Web.Release.config
@@ -21,7 +21,7 @@
 
   <connectionStrings>
     <add name="Production"
-         connectionString="Server=69.89.31.250; Port=5432; User Id=neoanime_belletrix; Password=IU)J_5IrPlCwSwrqq2; Database=neoanime_belletrix; SSL=True; Sslmode=Require; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;"
+         connectionString="Server=69.89.31.250; Port=5432; User Id=neoanime_belletrix-prod; Password=yT0cvz7rLMseiW6AKz; Database=neoanime_belletrix; SSL=True; Sslmode=Require; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;"
          xdt:Transform="Replace" xdt:Locator="Match(name)" />
   </connectionStrings>
 
