--- a/Belletrix/Web.config
+++ b/Belletrix/Web.config
@@ -16,7 +16,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="Production" connectionString="Server=localhost; Port=5432; User Id=neoanime_belletrix; Password=IU)J_5IrPlCwSwrqq2; Database=neoanime_belletrix; SSL=False; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;" />
+    <add name="Production" connectionString="Server=localhost; Port=5432; User Id=neoanime_belletrix-prod; Password=yT0cvz7rLMseiW6AKz; Database=neoanime_belletrix; SSL=False; Protocol=3; Pooling=true; MinPoolSize=1; MaxPoolSize=20;" />
   </connectionStrings>
 
   <Exceptional applicationName="Belletrix">
