Experiment with sending emails from Exceptional

--- a/Belletrix/Web.config
+++ b/Belletrix/Web.config
@@ -21,7 +21,16 @@
 
   <Exceptional applicationName="Belletrix">
     <ErrorStore type="PostgreSQL" connectionStringName="Production" />
+    <Email fromAddress="nobody@andreinicholson.com" fromDisplayName="Belletrix" toAddress="contact@andreinicholson.com" />
   </Exceptional>
+
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="nobody@andreinicholson.com">
+        <network host="smtp.mandrillapp.com" port="587" userName="mandrill@andreinicholson.com" password="qwLoJKuvtJfrSnNSK_wz-A" enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 
   <system.web>
     <authentication mode="Forms">
