--- a/Belletrix/Web.Release.config
+++ b/Belletrix/Web.Release.config
@@ -25,6 +25,11 @@
          xdt:Transform="Replace" xdt:Locator="Match(name)" />
   </connectionStrings>
 
+  <Exceptional applicationName="Belletrix">
+    <Email fromAddress="nobody@andreinicholson.com" fromDisplayName="Belletrix" toAddress="contact@andreinicholson.com"
+           xdt:Transform="Insert" />
+  </Exceptional>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
