--- a/Belletrix.Core/Belletrix.Core.csproj
+++ b/Belletrix.Core/Belletrix.Core.csproj
@@ -39,6 +39,10 @@
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Piwik.Tracker, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Piwik.Tracker.2.0.0.0\lib\net40\Piwik.Tracker.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -58,10 +62,7 @@
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Piwik.Tracker\Piwik.Tracker.csproj">
-      <Project>{c3bb0e94-f45c-4691-81ff-061fc20e3209}</Project>
-      <Name>Piwik.Tracker</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
