--- a/Belletrix.Core/Belletrix.Core.csproj
+++ b/Belletrix.Core/Belletrix.Core.csproj
@@ -54,9 +54,10 @@
     <Compile Include="ApplicationCache.cs" />
     <Compile Include="Connections.cs" />
     <Compile Include="DateTimeFilter.cs" />
-    <Compile Include="DeploymentEnvironment.cs" />
+    <Compile Include="DebuggingService.cs" />
     <Compile Include="Formatter.cs" />
     <Compile Include="ICacheService.cs" />
+    <Compile Include="IDebuggingService.cs" />
     <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
