--- a/Belletrix.Core/Belletrix.Core.csproj
+++ b/Belletrix.Core/Belletrix.Core.csproj
@@ -39,6 +39,12 @@
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Mono.Security">
+      <HintPath>..\packages\Npgsql.2.2.5\lib\net45\Mono.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Npgsql">
+      <HintPath>..\packages\Npgsql.2.2.5\lib\net45\Npgsql.dll</HintPath>
+    </Reference>
     <Reference Include="Piwik.Tracker, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Piwik.Tracker.2.0.0.0\lib\net40\Piwik.Tracker.dll</HintPath>
       <Private>True</Private>
@@ -47,6 +53,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
@@ -55,6 +62,7 @@
     <Compile Include="Connections.cs" />
     <Compile Include="DateTimeFilter.cs" />
     <Compile Include="DebuggingService.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Formatter.cs" />
     <Compile Include="ICacheService.cs" />
     <Compile Include="IDebuggingService.cs" />
