--- a/src/Belletrix.Entity/Belletrix.Entity.csproj
+++ b/src/Belletrix.Entity/Belletrix.Entity.csproj
@@ -37,15 +37,15 @@
     <Compile Include="..\Belletrix.Core\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="Enum\ActivityLogParticipantTypes.cs" />
     <Compile Include="Enum\ActivityLogTypes.cs" />
     <Compile Include="ViewModel\ActivityLogCreateViewModel.cs" />
     <Compile Include="Model\ActivityLogModel.cs" />
     <Compile Include="Model\ActivityLogParticipantModel.cs" />
     <Compile Include="Model\ActivityLogPersonModel.cs" />
-    <Compile Include="ViewModel\ActivityLogPersonViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\ActivityLogTypesViewModel.cs" />
     <Compile Include="ViewModel\ActivityLogEditViewModel.cs" />
+    <Compile Include="ViewModel\ActivityLogPersonCreateViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
